edition = "2023";

package wayplatform.connect.ileap.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "wayplatform/connect/ileap/v1/energy_carrier.proto";
import "wayplatform/connect/ileap/v1/glec_distance.proto";
import "wayplatform/connect/ileap/v1/location.proto";

// TAD (Transport Activity Data) contains activity data, referring to a single
// consignment, leg, and mode of transport, or to a single transshipment
// within a hub.
//
// Each TAD CAN contain values for attributes which are categorical to the
// operations of a fleet or hub (such as load factor or feedstock mix). In
// this case, the values CAN be calculated from the actual data of more than
// one consignment ("representative" or "average data").
//
// The TAD data type is designed for entities (Transport Operators or Transport
// Service Organizers) that lack the capabilities to perform carbon emission
// calculations (see Business Case 3) or are contractually obliged to exchange
// activity data with another party.
//
// It can also be used by the service providers (Transport Operator or
// Transport Service Organizer) to provide additional transparency to their
// business partners where relevant.
//
// TADs are exchanged via the dedicated GET /2/ileap/tad endpoint
// (Data Transaction DT#3). TADs are NOT embedded as PACT extensions.
//
// Filtering: query parameters as key-value pairs (e.g., ?mode=Road).
// Pagination: limit param + Link: <url>; rel="next" header.
// Response format: { "data": [TAD, ...] }
//
// See iLEAP Technical Specifications, section "Transport Activity Data (TAD)".
// Reference: https://sine-fdn.github.io/ileap-extension/#dt-tad
message TAD {
  // The non-empty unique ID of this activity relative to the host system.
  // Required.
  string activity_id = 1 [
    json_name = "activityId",
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1
  ];

  // The non-empty array of unique IDs of the consignments related to the
  // activity (relative to the host system and to the data recipient).
  // Required.
  repeated string consignment_ids = 2 [
    json_name = "consignmentIds",
    (buf.validate.field).repeated.min_items = 1
  ];

  // The distance between the origin and the destination of the activity.
  // Required.
  GLECDistance distance = 3 [(buf.validate.field).required = true];

  // Mass of freight (SI derived Unit kilograms).
  // Optional. Type: Decimal.
  string mass = 4 [(buf.validate.field).string.pattern = "^-?\\d+(\\.\\d+)?$"];

  // Ratio of the mass of the actual load to the maximum legally authorized
  // load of a particular vehicle on a TOC level. It is applied to the
  // loaded distance of the transport. Optional. Type: Decimal.
  //
  // The value MUST be between 0 (excluding) and 1 (including).
  string load_factor = 5 [
    json_name = "loadFactor",
    (buf.validate.field).string.pattern = "^-?\\d+(\\.\\d+)?$"
  ];

  // Ratio of the section of the route of a vehicle during which no freight
  // is transported over the total distance (loaded plus empty distance).
  // Optional. Type: Decimal.
  //
  // The value MUST be between 0 (including) and 1 (excluding).
  string empty_distance_factor = 6 [
    json_name = "emptyDistanceFactor",
    (buf.validate.field).string.pattern = "^-?\\d+(\\.\\d+)?$"
  ];

  // The origin of the activity related to the Transport Activity. Required.
  Location origin = 7 [(buf.validate.field).required = true];

  // The destination of the activity related to the Transport Activity.
  // Required.
  Location destination = 8 [(buf.validate.field).required = true];

  // Timestamp of departure. Required.
  //
  // The value MUST be a date and time string conforming to ISO 8601 with
  // timezone UTC.
  google.protobuf.Timestamp departure_at = 9 [
    json_name = "departureAt",
    (buf.validate.field).required = true
  ];

  // Timestamp of arrival. Required.
  //
  // The value MUST be a date and time string conforming to ISO 8601 with
  // timezone UTC.
  google.protobuf.Timestamp arrival_at = 10 [
    json_name = "arrivalAt",
    (buf.validate.field).required = true
  ];

  // Mode of transport. Required.
  //
  // Valid values (see iLEAP spec TransportMode enum):
  //   - "Road": For transport mode road
  //   - "Rail": For transport mode rail
  //   - "Air": For transport mode air
  //   - "Sea": For transport mode sea
  //   - "InlandWaterway": For transport mode inland waterway
  string mode = 11 [(buf.validate.field) = {
    required: true
    string: {
      in: [
        "Road",
        "Rail",
        "Air",
        "Sea",
        "InlandWaterway"
      ]
    }
  }];

  // Category of relevant packaging or transport equipment units utilized
  // for the transport of the consignment. Optional.
  //
  // Valid values: "Box", "Pallet", "Container-TEU", "Container-FEU",
  // "Container".
  string packaging_or_tr_eq_type = 12 [
    json_name = "packagingOrTrEqType",
    (buf.validate.field).string = {
      in: [
        "Box",
        "Pallet",
        "Container-TEU",
        "Container-FEU",
        "Container"
      ]
    }
  ];

  // Number of packaging or transport equipment units utilized to transport
  // the related consignment by the Transport Operator or Transport Service
  // Organizer. Optional.
  int32 packaging_or_tr_eq_amount = 13 [json_name = "packagingOrTrEqAmount"];

  // If defined, the non-empty array of EnergyCarriers used to generate
  // mechanical movement or heat and to generate chemical or physical
  // processes. Optional.
  //
  // The sum of the relative shares of the energy carriers MUST equal 1.
  // The relative share of each energy carrier MUST be computed relative to
  // (total) Transport Activity of the TAD.
  //
  // This array MAY contain aggregated data from multiple consignments. In
  // this case, the aggregation MUST follow principles from the GLEC
  // Framework.
  repeated EnergyCarrier energy_carriers = 14 [json_name = "energyCarriers"];

  // Temperature control status of the consignment. Optional.
  //
  // If defined, the value MUST be one of:
  //   - "ambient": Non-temperature controlled freight only
  //   - "refrigerated": Refrigerated freight only
  //
  // Note: The enumeration of temperature control status will be evolved in
  // future revisions. Account for this when implementing the validation of
  // this property.
  string temperature_control = 15 [
    json_name = "temperatureControl",
    (buf.validate.field).string = {
      in: [
        "ambient",
        "refrigerated"
      ]
    }
  ];
}
